force-app/main/default/objects/Portfolio_Refresh_Complete__e/Portfolio_Refresh_Complete__e.object-meta.xml
<CustomObject>
    <label>Portfolio Refresh Complete</label>
    <pluralLabel>Portfolio Refresh Complete Events</pluralLabel>
</CustomObject>