force-app/main/default/objects/Portfolio_Refresh_Complete__e/fields/Current_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Count__c</fullName>
    <label>Current Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>