force-app/main/default/objects/Portfolio_Refresh_Complete__e/fields/Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Failure_Count__c</fullName>
    <label>Failure Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>