force-app/main/default/objects/Portfolio_Refresh_Complete__e/fields/Portfolio_Id__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Id__c</fullName>
    <label>Portfolio Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>