force-app/main/default/objects/Portfolio_Refresh_Complete__e/fields/Total_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Total_Stocks__c</fullName>
    <label>Total Stocks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>